// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component snapshots > matches badge variant snapshots 1`] = `
<div
  aria-label="badge variants"
>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80"
  >
    New
  </div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80"
  >
    Featured
  </div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80"
  >
    Sold out
  </div>
  <div
    class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground"
  >
    In stock
  </div>
</div>
`;

exports[`component snapshots > matches the card layout snapshot 1`] = `
<div
  class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
  data-slot="card"
>
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6"
    data-slot="card-header"
  >
    <div
      class="leading-none font-semibold"
      data-slot="card-title"
    >
      Featured product
    </div>
    <div
      class="text-muted-foreground text-sm"
      data-slot="card-description"
    >
      Snapshot-stable card content
    </div>
  </div>
  <div
    class="px-6"
    data-slot="card-content"
  >
    <p>
      Product summary
    </p>
  </div>
  <div
    class="flex items-center px-6 [.border-t]:pt-6"
    data-slot="card-footer"
  >
    <button
      aria-busy="false"
      aria-disabled="false"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-lg text-sm font-medium transition-all duration-200 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive relative overflow-hidden border bg-background shadow-sm hover:bg-accent hover:text-accent-foreground hover:border-accent-foreground/20 hover:shadow-md dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-10 px-4 py-2 has-[>svg]:px-3 group"
      data-slot="button"
      id="_r_4_"
      role="button"
    >
      <div
        class="relative flex items-center gap-2"
      >
        <span
          class="transition-opacity duration-200"
        >
          View details
        </span>
      </div>
      <div
        aria-hidden="true"
        class="absolute inset-0 rounded-lg opacity-0 group-hover:opacity-100 transition-all duration-1000 bg-linear-to-r from-white/0 via-white/10 to-white/0 -translate-x-full group-hover:translate-x-full"
      />
    </button>
  </div>
</div>
`;

exports[`component snapshots > matches the default button snapshot 1`] = `
<button
  aria-busy="false"
  aria-disabled="false"
  class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all duration-200 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive relative overflow-hidden bg-secondary text-secondary-foreground hover:bg-secondary/80 hover:shadow-md hover:scale-[1.02] active:scale-[0.98] h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 text-xs group"
  data-slot="button"
  id="_r_0_"
  role="button"
>
  <div
    class="relative flex items-center gap-2"
  >
    <span
      aria-hidden="true"
    >
      icon
    </span>
    <span
      class="transition-opacity duration-200"
    >
      Add to cart
    </span>
  </div>
  <div
    aria-hidden="true"
    class="absolute inset-0 rounded-lg opacity-0 group-hover:opacity-100 transition-all duration-1000 bg-linear-to-r from-white/0 via-white/10 to-white/0 -translate-x-full group-hover:translate-x-full"
  />
</button>
`;

exports[`component snapshots > matches the input snapshot with icons 1`] = `
<div
  class="relative group"
>
  <span
    aria-hidden="true"
  >
    icon
  </span>
  <input
    class="flex w-full rounded-lg border border-input bg-background text-sm ring-offset-background transition-all duration-200 file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:border-ring disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 pl-9 input-focus"
    placeholder="Search products"
  />
  <span
    aria-hidden="true"
  >
    icon
  </span>
</div>
`;

exports[`component snapshots > matches the loading button snapshot 1`] = `
<button
  aria-busy="true"
  aria-describedby="_r_3_"
  aria-disabled="true"
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-all duration-200 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive relative overflow-hidden bg-primary text-primary-foreground hover:bg-primary/90 hover:shadow-lg hover:scale-[1.02] active:scale-[0.98] shadow-md h-12 rounded-lg px-8 has-[>svg]:px-5 text-base cursor-wait group"
  data-slot="button"
  disabled=""
  id="_r_2_"
  role="button"
  tabindex="-1"
>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-linear-to-r from-transparent via-white/10 to-transparent animate-pulse"
  />
  <div
    class="relative flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-loader-circle animate-spin"
      data-testid="loading-spinner"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <span
      class="opacity-70 transition-opacity duration-200"
    >
      Saving
    </span>
  </div>
  <div
    aria-hidden="true"
    class="absolute inset-0 rounded-lg opacity-0 group-hover:opacity-100 transition-all duration-1000 bg-linear-to-r from-white/0 via-white/10 to-white/0 -translate-x-full group-hover:translate-x-full"
  />
</button>
`;
